k8s/notification/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: notification
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: notification
          image: vsamarin/notification:1.0.0
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8000
