k8s/notification/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: homework
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/actuator/prometheus"
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8006
  type: ClusterIP
